# claude-presence

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/: FUNDING.yml
assets/: LaunchAgent.plist.tmpl  hook-forward.sh  statusline-wrapper.sh
specs/: design.md  requirements.md  research-dossier.json  tasks.md  verification-report.json
specs/hardening/: design.md  requirements.md  tasks.md  verification.md
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  privacy.rs  tray.rs
src/claude/: activity.rs  mod.rs  pricing.rs  pricing.toml  schema.rs  sessions.rs  transcript.rs
src/discord/: mod.rs  sink.rs
src/ingest/: events.rs  mod.rs  socket.rs
src/install/: hooks.rs  launchd.rs  mod.rs  statusline.rs
src/platform/: macos.rs  mod.rs
src/state/: aggregator.rs  mod.rs  model.rs
tests/: e2e.rs  privacy.rs
tests/fixtures/: assistant_line.json  assistant_line_partial.json  hook_pretooluse.json  hook_sessionstart.json  session.json  statusline.json  statusline_minimal.json
